--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/repo
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
@@ -15,7 +16,6 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
 
     steps:
       - checkout
@@ -48,6 +48,7 @@ jobs:
           command: |
             . venv/bin/activate
             pytest --cov-report term-missing --cov=./ ./test_module.py
+            codecov
 
       - store_artifacts:
           path: test-reports
